[package]
name = "todo-app-1-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = [
  "runtime-tokio-rustls",
  "postgres",
  "offline",
  "chrono",
] }
uuid = { version = "1.1", features = ["v4"] }
validator = { version = "0.16", features = ["derive"] }
